revereor/theme/light.css
:root {
	--bg: #f2eae6;
	--border: var(--bg);
	--button-text: white;
	--control-bg: #fcf6f2;
	--control-bg-dark: #f7f1ed;
	--control-bg-light: #fff9f5;
	--control-bg-bright: #fffbf8;
	--green: #439c53;
	--link-text: var(--button-text);
	--primary: #455696;
	--primary-hv: #546ab8;
	--secondary: #de5c1a;
	--secondary-hv: #c75317;
	--shadow: rgba(0,0,0,0.059);
	--text-dim: #75716f;
	--text-header: white;
}

* {
	color-scheme: light;
	accent-color: var(--primary);
	text-shadow: none !important;
}

:not(.icon) {
	/* https://css-tricks.com/snippets/css/system-font-stack/ */
	font-family: system-ui, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
	box-shadow: none;
	scrollbar-width: thin;
}

body {
	font-size: .7em;
}

html, body {
	background: var(--bg);
	color: var(--primary);
}

.wrap, .panel, .post, .codebox, .cp-main .pm, .dropdown .dropdown-contents, blockquote, .postbody table, .attachbox {
	margin-bottom: 8px;
	padding: 16px;
	background-color: var(--control-bg);
	border-radius: 8px;
	box-shadow: 0 0 0 1px var(--shadow) !important;
}
	.wrap, .panel, .post, .postprofile, .bg1, .bg2, .bg3, .dropdown .dropdown-contents, .dropdown .pointer, .dropdown .pointer-inner {
		border: 0;
	}
	.dropdown .dropdown-contents {
		max-height: none;
		padding: 0;
	}
		.dropdown .dropdown-contents a, .dropdown fieldset.display-options {
			padding: 8px;
		}
		.dropdown-extended ul {
			max-height: 356px;
		}
			.dropdown-extended ul li:hover {
				background: none;
				color: var(--primary);
			}
			.dropdown-extended a.mark_read {
				top: 42%;
				background-color: var(--control-bg-light);
				border-radius: 4px 0 0 4px;
				box-shadow: 0 0 0 1px var(--shadow) !important;
			}
	.dropdown .dropdown-contents, .dropdown-extended .header {
		background-color: var(--control-bg-bright);
	}
	.panel, .bg1, .bg2, .bg3 {
		background-color: var(--control-bg-light);
	}
	.post, .topic_poll > .panel {
		margin: 16px 0;
		padding: 16px;
	}
	.panel-container .panel, .contact-icons a:hover {
		background: var(--control-bg-dark);
	}
		#quick-links .separator, .dropdown li.separator {
			border-top-style: dotted;
		}
	blockquote, blockquote blockquote blockquote, .attachbox, .codebox {
		margin: 16px 1px;
		background: var(--control-bg-dark);
		border-color: var(--control-bg-dark);
	}
		blockquote blockquote {
			margin: 16px 8px;
		}
	blockquote blockquote, blockquote blockquote blockquote blockquote, ul.forums, .row {
		background-color: var(--control-bg);
	}
	.dropdown-contents li.bg2, .dropdown-contents li.bg2:hover, .notification_list li.bg3 {
		font-weight: 600;
		background-color: var(--control-bg-dark);
	}

.headerbar {
	background: var(--secondary);
}
	.search-header {
		margin-top: 35px;
	}
		.search-header .inputbox {
			color: var(--button-text) !important;
			background: none;
			border-bottom: 1px solid #fffa;
			border-radius: 0;
		}
			.search-header .inputbox:hover, .search-header .inputbox:focus {
				background: #fff1;
				border-bottom: 1px solid #fff;
			}
				.search-header ::placeholder {
					color: #fffa;
				}
					.search-header:hover ::placeholder, .search-header:focus ::placeholder {
						color: #fff;
					}
	.search-header .button-search, .search-header .button-search-end {
		padding: 1px 3px 4px;
	}

.logo {
	padding: 10px;
}

.headerbar * {
	color: var(--text-header);
}
	.site_logo {
		background-size: contain;
	}

.navbar {
	padding-left: 6px;
	background: none;
}
	ul.navlinks, .attachbox dd {
		border-top: none;
	}

.breadcrumbs .crumb::before {
	content: '/';
	font-weight: 300;
}
	.breadcrumbs span:first-of-type a {
		margin-right: -.25em;
	}
		.breadcrumbs span:first-of-type a span {
			display: none;
		}

li.header dt, li.header dd, table.table1 thead th {
	padding-top: 0;
	font-weight: 600 !important;
	text-transform: none;
}
	li.header dt {
		font-size: 1.1em;
		line-height: 1em;
	}
	li.header dl.row-item dt .list-inner {
		padding-left: 2px;
	}
		ul.topiclist li.row {
			padding: 2px 0;
		}
			ul.topiclist.forums li.row dt div, ul.topiclist.forums li.row dd:not(.lastpost) {
				margin-top: 2px;
			}
				ul.topiclist li.row dd {
					padding-top: 0;
				}

.responsive-center.time {
	margin: -8px 8px 8px 8px;
}

.action-bar {
	font-size: unset;
}
	.action-bar.compact, .stat-block, .headerspace {
		margin: -8px 8px;
	}
	.action-bar.compact {
		clear: both;
	}
	.action-bar .button,
	.action-bar .search-box .inputbox {
		box-sizing: border-box;
		height: 26px;
	}
	.action-bar .inputbox {
		background: var(--control-bg-light);
		border-color: var(--secondary) !important;
	}
		.action-bar .inputbox:hover, .action-bar .inputbox:focus {
			background: var(--control-bg-bright);
		}

.forabg, .forumbg {
	margin: 16px 0;
	background: var(--primary);
}

a, h1, h2, h3, .postlink, .post h3 a.first-unread, .post:target h3 a {
	color: var(--primary);
}
	.navigation a, dl.details dd {
		color: var(--primary) !important;
	}
	a:hover, .navigation a:hover, .postlink:hover,
	a:focus, .navigation a:focus, .postlink:focus,
	a:active, .navigation a:active, .postlink:active,
	.arrow-left:hover, .arrow-right:hover {
		color: var(--secondary);
	}
	.navigation a, .postlink,
	.navigation a:hover, .postlink:hover,
	.navigation a:focus, .postlink:focus {
		background: none !important;
	}
		.navigation .active-subsection a,
		.navigation .active-subsection a:hover,
		.navigation .active-subsection a:focus {
			background: var(--primary) !important;
			color: var(--button-text) !important;
		}
	a.forumtitle, a.topictitle, a.lastsubject, .username, .username-coloured, .postlink {
		font-weight: 600;
	}
	.postlink {
		border: none;
	}

#memberlist tr.inactive, #team tr.inactive {
	font-style: unset;
}

.topiclist dl.row-item dt, .topiclist dl.row-item dd {
	min-height: 48px;
}
.forumbg .header a, .forabg .header a, th a,
li.header dl.row-item dt, li.header dl.row-item dd {
	color: var(--button-text) !important;
}
/* ... */

